--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ links:
   - title: Blogs
     url: /blogs/
   - title: Request Audit
-    url: @t.me/Oxaudron
+    url: https://t.me/Oxaudron
 
 
 # --------------------------------------------------
